Minor Improvement:
* Use Collecection.addAll
* Unused import
* Use empty array
* Unnecessary semicolon
* Use Integer.valueOf